--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="200dp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:textAllCaps="true"
+        android:textSize="25sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:text="@string/pc_remote" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:weightSum="3"
+        android:layout_height="wrap_content">
+
+    <ImageButton
+        android:id="@+id/play"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:src="@drawable/music"
+        android:layout_width="100dp"
+        android:scaleType="fitCenter"
+        android:layout_height="100sp"
+        tools:ignore="ContentDescription" />
+    <ImageButton
+        android:id="@+id/restart"
+        android:layout_weight="1"
+        android:layout_margin="10dp"
+        android:src="@drawable/restart"
+        android:layout_width="100sp"
+        android:scaleType="fitCenter"
+        android:layout_height="100sp"
+        tools:ignore="ContentDescription" />
+    <ImageButton
+        android:id="@+id/shutdown"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:src="@drawable/shutdown"
+        android:layout_width="100sp"
+        android:scaleType="fitCenter"
+        android:layout_height="100sp"
+        tools:ignore="ContentDescription" />
+
+    </LinearLayout>
+
+</LinearLayout>
